# rasputin

./: .gitignore  CMakeLists.txt  Dockerfile  Pipfile  README.md  ROADMAP.md  main.yml  setup.cfg  setup.py
.circleci/: config.yaml
.circleci/rasputin_data/tin_archive/: ingoya.h5  ingoya.xdmf
.github/workflows/: main.yaml  main.yml
cpp_test/: CMakeLists.txt  test_sun_position.cpp  test_triangulate.cpp
examples/: README.md  example_new.py  general_web.py  jotunheimen_web.py  material.yaml  new_example.py  two_faces.py  two_faces_web.py
examples/example_data/corine/: 0000_4326_corine2018_4e6064_GML.xsd
examples/example_data/materials/: material.yaml
examples/example_data/tin_archive/: ingoya.h5  ingoya.xdmf
lib/: README.md
src/rasputin/: .geometry.py.swp  .web_visualize.py.swp  __init__.py  application.py  avalanche.py  avalanche_forecast.py  bindings.cpp  calculate.py  geo_tiff_reader.py  geometry.py  globcov_repository.py  gml_repository.py  html_writer.py  land_cover_repository.py  material.py  material_specification.py  mesh.py  mesh_colouring.py  mesh_utils.py  py2js.py  reader.py  solar_position.h  tin_repository.py  triangulate_dem.h  web_visualize.py  wfs_repository.py  writer.py
src/rasputin/cpp/: bindings.cpp  cgal_mesh.h  cgal_polygon.h  cgal_raster_data.h  cgal_shade.h  mesh.h  mesh_bindings.cpp  polygon.h  polygon_bindings.cpp  raster_bindings.cpp  raster_data.h  shade.h  shade_bindings.cpp  slope.h  slope_bindings.cpp  solar_position.h  solar_position_bindings.cpp  triangulate_dem.h  types.h  vec_bindings.cpp
tests/: test_avalanche.py  test_gml_repository.py  test_land_cover_repository.py  test_mesh.py  test_polygons.py  test_raster_repository.py  test_read_raster_file.py  test_tin_repository.py
web/: data.js  index.html  index.js
web/js/controls/: PointerLockControls.js
